--- a/FaPA/GUI/Design/Styles/DataTemplates.xaml
+++ b/FaPA/GUI/Design/Styles/DataTemplates.xaml
@@ -5,12 +5,11 @@
                     xmlns:searchFattura="clr-namespace:FaPA.GUI.Feautures.SearchFattura"
                     xmlns:a="clr-namespace:FaPA.GUI.Feautures.Fattura"
                     xmlns:t1="clr-namespace:FaPA.GUI.Design.Templates"
-                    xmlns:d="clr-namespace:FaPA.Infrastructure.Dto"
                     xmlns:controls="clr-namespace:FaPA.GUI.Controls"
                     xmlns:utils="clr-namespace:FaPA.GUI.Utils"
                     xmlns:mr="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
                     xmlns:local="clr-namespace:FaPA.GUI.Feautures.Anagrafica"
-                    xmlns:enums="clr-namespace:FaPA.Core.FaPa">
+                    xmlns:fp="clr-namespace:FaPA.Core.FaPa">
 
     <DataTemplate x:Key="AnagraficaTemplate">
         <t1:Anagrafica  />
@@ -117,7 +116,7 @@
                                                 TextSearch.TextPath="Description"
                                                 DisplayMemberPath="Description"
                                                 SelectedValuePath="Value"
-						                        ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:CondizioniPagamentoType}}}"
+						                        ItemsSource="{Binding Source={utils:Enumeration {x:Type fp:CondizioniPagamentoType}}}"
                                                 SelectedValue="{Binding CurrentPoco.CondizioniPagamento, Mode=TwoWay, 
                                                                         UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"/>
                                 </StackPanel>
@@ -288,7 +287,9 @@
         <t1:DatiOrdine/>
     </DataTemplate>
 
-    <DataTemplate  DataType="{x:Type d:DatiOrdineAcquistoDto}">
+    <!--//DatiOrdineAcquistoDto-->
+
+    <DataTemplate  DataType="{x:Type fp:DatiDocumentiCorrelatiType}">
 
         <Grid Margin="2,2,2,2">
             <Grid.RowDefinitions>
