--- a/FaPA/GUI/Design/Templates/Ritenuta.xaml
+++ b/FaPA/GUI/Design/Templates/Ritenuta.xaml
@@ -5,13 +5,13 @@
 
     <Grid Margin="2,2,2,2">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <StackPanel Width="Auto" HorizontalAlignment="Stretch"  Grid.Row="0" Orientation="Vertical"
-                   Visibility="{Binding Path=Dto, Converter={StaticResource NullToInverseVisibiltyConverter}}">
+                   Visibility="{Binding CurrentPoco, Converter={StaticResource NullToInverseVisibiltyConverter}}">
 
             <TextBlock Text="Nessuna ritenuta è stata aggiunta" FontSize="14" Foreground="Red" 
                            Height="Auto" Margin="10,25,15,15" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
@@ -25,7 +25,7 @@
         </StackPanel>
 
         <GroupBox Grid.Row="0" Header="Ritenuta previdenziale"
-                  Visibility="{Binding Path=Dto, Converter={StaticResource NullToVisibiltyConverter}}">
+                  Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
             <Grid Margin="2,2,2,2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="45" />
@@ -39,29 +39,33 @@
 
                 <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
                     <TextBlock Text="Tipo" />
-                    <TextBox   Text="{Binding Dto.TipoRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
+                    <TextBox   Text="{Binding CurrentPoco.TipoRitenuta, UpdateSourceTrigger=LostFocus, 
+                                                                        ValidatesOnDataErrors=True, 
+                                                                        NotifyOnTargetUpdated=True,
+                                                                        NotifyOnValidationError=True}" 
+                               HorizontalAlignment="Stretch"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
                     <TextBlock Text="Importo" />
-                    <TextBox   Text="{Binding Dto.ImportoRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
+                    <TextBox   Text="{Binding CurrentPoco.ImportoRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
                     <TextBlock Text="Aliquota" />
-                    <TextBox   Text="{Binding Dto.AliquotaRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                    <TextBox   Text="{Binding CurrentPoco.AliquotaRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
                     <TextBlock Text="Causale pagamento" />
-                    <TextBox   Text="{Binding Dto.CausalePagamento, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                    <TextBox   Text="{Binding CurrentPoco.CausalePagamento, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
                 </StackPanel>
 
             </Grid>
         </GroupBox>
 
         <GroupBox Grid.Row="1" Header="Cassa previdenziale"
-                  Visibility="{Binding Path=Dto, Converter={StaticResource NullToVisibiltyConverter}}">
+                  Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
             <Grid Margin="2,2,2,2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="45" />
@@ -76,34 +80,34 @@
 
                 <StackPanel  Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
                     <TextBlock Text="Tipo" />
-                    <TextBox   Text="{Binding Dto.TipoCassa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
+                    <TextBox   Text="{Binding CurrentPoco.TipoCassa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
                 </StackPanel>
 
                 <StackPanel  Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
                     <TextBlock Text="Aliquota" />
-                    <TextBox   Text="{Binding Dto.AlCassa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
+                    <TextBox   Text="{Binding CurrentPoco.AlCassa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
                     <TextBlock Text="Contributo" />
-                    <TextBox   Text="{Binding Dto.ImportoContributoCassa, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                    <TextBox   Text="{Binding CurrentPoco.ImportoContributoCassa, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
                     <TextBlock Text="Imponibile" />
-                    <TextBox   Text="{Binding Dto.ImponibileCassa, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                    <TextBox   Text="{Binding CurrentPoco.ImponibileCassa, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
                 </StackPanel>
 
                 <StackPanel Grid.Row="2" Grid.Column="0" Margin="2,0,2,0">
                     <TextBlock Text="Aliquota" />
-                    <TextBox   Text="{Binding Dto.AliquotaIVA, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                    <TextBox   Text="{Binding CurrentPoco.AliquotaIVA, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
                 </StackPanel>
             </Grid>
         </GroupBox>
 
         <StackPanel Orientation="Vertical" Grid.Row="2" Height="Auto"  Margin="2,2,2,2" 
                     utils:FocusAdvancement.AdvancesByEnterKey="True"
-                    Visibility="{Binding Path=Dto, Converter={StaticResource NullToVisibiltyConverter}}">
+                    Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
 
             <!--<StackPanel.InputBindings>
                 <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
