--- a/FaPA/GUI/Design/Templates/DatiOrdine.xaml
+++ b/FaPA/GUI/Design/Templates/DatiOrdine.xaml
@@ -11,12 +11,78 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Border Margin="2,2,2,2" Padding="2,2,2,2">
-            <ContentControl Content="{Binding CurrentPoco}"/>
+        <Border Margin="2,2,2,2" Padding="2,2,2,2" Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
+            <Grid Margin="2,2,2,2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <GroupBox Grid.Row="0" Header="Dati ordine di acquisto">
+                    <Grid Margin="2,2,2,2">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
+                            <TextBlock Text="Id Documento" />
+                            <TextBox   Text="{Binding CurrentPoco.IdDocumento, Mode=TwoWay, UpdateSourceTrigger=LostFocus, 
+                                                                            ValidatesOnDataErrors=True, 
+                                                                            ValidatesOnNotifyDataErrors=True, 
+                                                                            NotifyOnSourceUpdated=True, 
+                                                                            NotifyOnTargetUpdated=True, 
+                                                                            NotifyOnValidationError=True}" 
+                                   HorizontalAlignment="Stretch" />
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0" Width="25">
+                            <TextBlock Text="CIG" />
+                            <TextBox   Text="{Binding CurrentPoco.CodiceCig, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Stretch" />
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="0" Grid.Column="2" Margin="2,0,2,0" Width="25">
+                            <TextBlock Text="CUP" />
+                            <TextBox   Text="{Binding CurrentPoco.CodiceCup, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Stretch" />
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="0" Grid.Column="3" Margin="2,0,2,0" MinWidth="25">
+                            <TextBlock Text="Codice Commessa" />
+                            <TextBox   Text="{Binding CurrentPoco.CodiceCommessaConvenzione, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Stretch" />
+                        </StackPanel>
+
+                        <!--
+
+                        <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
+                            <TextBlock Text="Data documento" />
+                            <TextBox   Text="{Binding Data, Mode=TwoWay, StringFormat='{}{0:d}', ValidatesOnDataErrors=True, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True}" HorizontalAlignment="Stretch"/>
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="1" Grid.Column="2" Margin="2,0,2,0">
+                            <TextBlock Text="NumItem" />
+                            <TextBox   Text="{Binding CodiceCommessaConvenzione, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                        </StackPanel>-->
+
+                    </Grid>
+
+                </GroupBox>
+
+            </Grid>
         </Border>
 
         <StackPanel Width="Auto" HorizontalAlignment="Stretch"  Grid.Row="0" Orientation="Vertical"
-                   Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
+                    Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
 
             <TextBlock Text="Nessun dettaglio ordine è stato aggiunto " FontSize="14" Foreground="Red" 
                            Height="Auto" Margin="10,25,15,15" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
@@ -29,7 +95,8 @@
 
         </StackPanel>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Height="Auto"  Margin="2,2,2,2" >
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Height="Auto"  Margin="2,2,2,2" 
+                    Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
 
             <!--<StackPanel.InputBindings>
                 <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
